# md-view

./: .gitignore  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.app.config.mjs
.github/workflows/: build.yml
src/: App.svelte  app.css  fileAssets.ts  i18n.ts  tauri.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FileTree.svelte  MarkdownEditor.svelte  MarkdownPreview.svelte  OutlinePanel.svelte  VisualMarkdownEditor.svelte
